<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_4"
    android:background="@color/white"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_4"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/media_image"
            android:layout_width="@dimen/def_media_icon_small"
            android:layout_height="@dimen/def_media_icon_small"
            android:scaleType="centerInside"
            android:contentDescription="@string/desc_media_item"
            fresco:placeholderImage="@drawable/ic_def_image"
            />
    </RelativeLayout>

    <View
        android:id="@+id/selected_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_selected_view"
        android:visibility="gone" />
</android.support.v7.widget.CardView>